# mongodb

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  database.py  main.py  models.py  router.py  schemas.py
